Attempt to fix header on iphone

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -9,6 +9,7 @@ h1 {
   font-family: 'Sacramento', cursive;
   font-size: 42px;
   text-align: center;
+  font-weight: 400;
 }
 
 .headline-break {
